updated client